# ComfyUI-Reference-Based-Video-Colorization

./: .gitignore  DeepExemplarColorizationNodes.py  PERFORMANCE.md  README.md  REGISTRY_PUBLISHING_GUIDE.md  __init__.py  auto_installer.py  nodes.py  pyproject.toml
Workflows/: ColorMNet_Image_Workflow.json  Colorize Video Workflow.json  Colorize_Video_Workflow.json
colormnet/: config.py  downloader.py  inference.py  model.py
colormnet_dataset/: static_dataset.py  vos_dataset.py
colormnet_inference/: inference_core.py  memory_manager.py
colormnet_inference/data/: mask_mapper.py  test_datasets.py  video_reader.py
colormnet_inference/interact/: gui.py  interactive_utils.py  resource_manager.py  s2m_controller.py
colormnet_model/: attention.py  modules.py  network.py  trainer.py
core/: transforms.py
models/: ColorVidNet.py  NonlocalNet.py
models/feature_extractors/: __init__.py  clip_encoder.py  dinov2_encoder.py
